--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,16 +1,10 @@
-* 
-{
-	box-sizing: border-box;
-  padding: 1px;
-}
+
 header{
   font-size: 80px;
   font-family: Helvetica;
-  margin: 60px 0px 0px 200px;
+  margin: 50px 0px 0px 200px;
   color: #135A11;
 }
-
-
 /*This is my background, margin & padding is for info inside background*/
 body {
    margin: 20px;
@@ -20,7 +14,6 @@ body {
    background-size: 100%;
    font-size: 16px;
 }
-
  /*This is my header color*/
 div#topbar{
 	background:linear-gradient(#14CAB4, #7DF553);
@@ -36,6 +29,7 @@ div#topbar > #logo{
 	color:#999;
 
 }
+
 /*This keeps all my shit from running of the screen*/
 div#topbar > #sections_panel > div{
 	background:#333;
@@ -44,7 +38,6 @@ div#topbar > #sections_panel > div{
 	margin:px;
 	color:#FC0;
 }
-
 img {
     border: 3px solid #ddd;
     border-radius: 10px;
@@ -52,7 +45,6 @@ img {
     max-width: 150px;
     margin: -55px -80px 0px 135px;
 }
-
 h1 {
 	font-family: 'Helvetica';
 	font-size: 60px;
@@ -63,30 +55,30 @@ h1 {
 h2 {
   font-size: 20px;
   color: #135A11;
-  margin: 10px -5px 10px 29px;
+  margin: 1px 10px -10px 1px;
 }
 h3 {
   font-size: 20px;
   color: #135A11;
   margin: -60px 0px 0px 350px;
-
 }
-
+h4 pre {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+     color: #135A11;
+}
 h5 {
   font-size: 20px;
   padding-top: 10px;
   margin: -30px 30px 0px 120px;
-  /*top bottom left right*/
   color: #135A11;
  }
  h6 {
   font-size: 14px;
   padding-top: 10px;
   margin: -48px 20px 0px 450px;
-  /*top bottom left right*/
   color: #135A11;
 }
-
 /*This is my cool dropdown button*/
 .dropbtn {
     background-color: #1F921A ;
@@ -96,17 +88,14 @@ h5 {
     border: none;
     cursor: pointer;
 }
-
 .dropbtn:hover, .dropbtn:focus {
     background-color: #A5ECE4;
     color: #1F921A;
 }
-
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -116,14 +105,12 @@ h5 {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
@@ -131,38 +118,96 @@ h5 {
 /*This is the flex container on my projects page*/
 .flex-container> div  {
   background-color: #C1E7FF;
-  margin: 1px;
-  margin-right: 50%;
+  margin-right: 10%;
   max-width: 55vw;
-  padding: 1px;
+  
   margin: 0px 0px 5px 5px;
-       /*drops the bottom - right - padding between grids - left*/
 }
 /*This aligns my text*/
 .box {
   display: flex;
+  height: 1px;
   flex-wrap: wrap;
   align-content: space-between;
-
-/*I need this for my footer*/
 }
-
 html, 
 .wrapper { 
   margin-bottom: 1px;
 }
-
 .footer,
 .push {
   height: 5px;
 }
-
 footer{
-  color: white;
+  color:white;
   font-size: 20px;
 }
-
 article {
-  margin: 20px -5px 20px 20px;
-  font-size: 20px;
+  margin: 30px -5px 20px 20px;
+  font-size: 18px;
+}
+
+p{
+  font-size: 18px;
+}
+.collapsible {
+  background-color:#C1E7FF;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+.active, .collapsible:hover {
+  background-color: rgb(171, 224, 157);
+}
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1c7;
+}
+ /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll when I add the rest of my resume */
+            background-color: rgb(0, 0, 0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }        
+        /* Modal Content */
+        .modal-content {
+          background-image: url("../images/pasture.jpg");
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 60%;
+        }        
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 36px;
+            font-weight: bold;
+        }        
+        .close:hover,
+        .close:focus {
+            color: #135A11;
+            text-decoration: none;
+            cursor: pointer;
+        }      
+.contact-button img {
+  justify-content: left;
+  align-items: space-between;
+
+  max-width: 75px;
 }
